brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui_app_server__bottom_pane__list_selection_view__tests__list_selection_footer_note_wraps.snap
---
source: tui_app_server/src/bottom_pane/list_selection_view.rs
assertion_line: 1261
expression: "render_lines_with_width(&view, 40)"
---
                                        
  Select Approval Mode                  
                                        
› 1. Read Only (current)  brocode can   
                          read files    
                                        
  Note: Use /setup-default-sandbox to   
  allow network access.                 
  Press enter to confirm or esc to go ba
