brocode-rs/tui_app_server/src/bottom_pane/snapshots/brocode_tui_app_server__bottom_pane__list_selection_view__tests__list_selection_spacing_with_subtitle.snap
---
source: tui_app_server/src/bottom_pane/list_selection_view.rs
assertion_line: 1166
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
  Switch between brocode approval presets       
                                                
› 1. Read Only (current)  brocode can read      
                          files                 
  2. Full Access          brocode can edit      
                          files                 
                                                
  Press enter to confirm or esc to go back
